Opened 17 years ago

Closed 17 years ago

Last modified 17 years ago

#1862 closed bug (fixed)

App server crash

Reported by: jackburton Owned by: axeld
Priority: critical Milestone: R1/alpha1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

App server crashed when doing the following:

  1. Start StyledEdit, open /boot/beos/etc/KanBe/default/.canna.
  2. Edit -> Select All
  3. Font -> Konatu Regular

It's always reproducible

Attachments (1)

crash.PNG (32.8 KB ) - added by jackburton 17 years ago.
app server crash

Download all attachments as: .zip

Change History (6)

by jackburton, 17 years ago

Attachment: crash.PNG added

app server crash

comment:1 by axeld, 17 years ago

Status: newassigned

comment:2 by axeld, 17 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev24160. Could originate in a bug in StyledEdit/STXT/libbe.so or .canna contains invalid characters - we probably should investigate this a bit more.

comment:3 by jackburton, 17 years ago

Ok I'll have a look to the StyledEdit/TextView part of code. Thanks for the quick fix.

comment:4 by axeld, 17 years ago

Looks like .canna and UTF8CountBytes() is to blame: the former obviously contains a malformed UTF-8 character, and the latter reported a 4 byte character (which got divided into 2 characters in the app_server again).

I've changed UTF8CountBytes() so that it will now count 2 characters - one malformed, and one okay.

comment:5 by jackburton, 17 years ago

Looks like you were faster :) Thank you again!

Note: See TracTickets for help on using tickets.