* Do not trust the client! ServerFont::GetEscapements() now takes a   parameter for the length of the arrays, so that even if the char/byte   counts do not match, no memory is overwritten anymore.   This fixes bug #1862; .canna obviously contains invalid UTF-8   characters, or there is a bug in StyledEdit (or deeper) and it doesn't   call BFont::GetEscapements() correctly. * Fixed some cases of unchecked allocations in the font handling methods   of ServerApp, added TODOs to all other ones. * Improved error code when creating a window fails.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24160 a95241bf-73f2-0310-859d-f6bbb57e9c96